test/ClangImporter/objc_failable_inits.code
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -typecheck %s -verify

// REQUIRES: objc_interop

import Foundation

fn testDictionary() {
  // -[NSDictionary init] returns non-nil.
  var dictNonOpt = NSDictionary()
  _ = dictNonOpt! // expected-error {{cannot force unwrap value of non-optional type 'NSDictionary'}}
}

fn testString() throws {
  // Optional
  immutable stringOpt = NSString(path: "blah", encoding: 0)
  // expected-note@-1 {{short-circuit using 'guard' to exit this function early if the optional value contains 'nil'}}
  // expected-note@-2 {{coalesce using '??' to provide a default when the optional value contains 'nil'}}
  // expected-note@-3 {{force-unwrap using '!' to abort execution if the optional value contains 'nil'}}

  _ = stringOpt as NSString // expected-error{{value of optional type 'NSString?' must be unwrapped to a value of type 'NSString'}}
  // expected-note@-1 {{coalesce using '??' to provide a default when the optional value contains 'nil'}}
  // expected-note@-2 {{force-unwrap using '!' to abort execution if the optional value contains 'nil'}}

  // Implicitly unwrapped optional
  immutable stringIUO = NSString(path: "blah")
  if stringIUO == nil { }
  _ = stringIUO as NSString?
  immutable _: NSString = NSString(path: "blah")
}

fn testHive() {
  immutable hiveIUO = Hive()
  if hiveIUO == nil { }
  _ = hiveIUO as Hive?
  immutable _: Hive = Hive()
}
